<resources>
    <string name="app_name">Secret PIN</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="rating_prompt">Product Rating %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pin1">pin</string>
    <string name="account_name">account</string>
    <string name="descriptiontext">description</string>
    <string name="pintext">pin text</string>
    <string name="name">name</string>
    <string name="title">Save your pin</string>
    <string name="bt_save">save</string>
    <string name="bt_list">PIN LIST</string>
    <string name="btn_list_view">PIN LIST</string>
    <string name="btn_insert">INSERT PIN</string>
</resources>
